--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,5 +1,14 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+
+.post {
+    width: 300px;
+    margin: auto;
+}
+
+.topMargin {
+    margin-top: 100px;
 }
